# quart-babel

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json
docs/: conf.py  index.rst  requirements.txt
docs/how_to_guides/: configuration.rst  formatting_dates.rst  formatting_numbers.rst  index.rst  installation.rst  jinja_filters.rst  reloading.rst  selector_functions.rst  translating.rst  troubleshooting.rst  using_translations.rst
docs/references/: changelog.rst  cheatsheet.rst  contributing.rst  index.rst  logo.rst
docs/references/api/: core.rst  domain.rst  formats.rst  index.rst  lazystring.rst  locale.rst  timezone.rst  utils.rst
docs/references/api/utils/: context.rst  formats.rst  index.rst  locale.rst  timezone.rst
docs/tutorials/: index.rst  installation.rst
quart_babel/: __init__.py  const.py  constants.py  context.py  core.py  domain.py  formatters.py  locale.py  middleware.py  speaklater.py  state.py  timezone.py  typing.py  utils.py
quart_babel/utils/: __init__.py  awaitable.py  context.py  formats.py  locale.py  timezone.py  typing.py
requirements/: dev.txt  requirements.txt
tests/: __init__.py  conftest.py  test_app_factory.py  test_date_formatting.py  test_domain.py  test_force_locale.py  test_gettext-old.py  test_gettext.py  test_helpers.py  test_integration.py  test_middleware.py  test_multiple_apps.py  test_number_formatting.py
