[tool.poetry]
name = "quart_babel"
version = "1.0.1"
description = "Implements i18n and l10n support for Quart."
authors = ["Chris Rood <quart.addons@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
quart = "^0.18.3"
Babel = "^2.11.0"
importlib-metadata = "^6.0.0"
pytz = "^2023.3"
asgi-tools = "^0.73.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-asyncio = "^0.20.3"
Sphinx = ">=3.4 <6.0.0"
pydata-sphinx-theme = "^0.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
